<resources>
    <string name="app_name">LamMayTinhBoTui</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_cong">+</string>
    <string name="number_c">C</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_tru">-</string>
    <string name="number_ac">AC</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="number_nhan">*</string>
    <string name="number_chia">/</string>
    <string name="number_cham">,</string>
    <string name="number_0">0</string>
</resources>
