<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@color/bac">

        <EditText
            android:background="@color/bac"
            android:id="@+id/edt_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="30sp" />

        <TextView
            android:background="@color/bac"
            android:id="@+id/tv_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/edt_input"
            android:text="0"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/black"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">

            <Button
                android:id="@+id/btn_number1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/whiteDark"
                android:text="@string/number_1"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_number2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/whiteDark"
                android:text="@string/number_2"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_number3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/whiteDark"
                android:text="@string/number_3"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_cong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/whiteDark"
                android:text="@string/number_cong"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_clear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/whiteDark"
                android:text="@string/number_c"
                android:textColor="@color/white"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">

            <Button
                android:id="@+id/btn_number4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/whiteDark"
                android:text="@string/number_4"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_number5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/whiteDark"
                android:text="@string/number_5"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_number6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/whiteDark"
                android:text="@string/number_6"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_tru"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/whiteDark"
                android:text="@string/number_tru"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_clearAll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/whiteDark"
                android:text="@string/number_ac"
                android:textColor="@color/white"
                android:textSize="30sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/black"
        android:orientation="horizontal"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/black"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="4">

                <Button
                    android:id="@+id/btn_number7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/whiteDark"
                    android:text="@string/number_7"
                    android:textColor="@color/white"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/btn_number8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/whiteDark"
                    android:text="@string/number_8"
                    android:textColor="@color/white"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/btn_number9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/whiteDark"
                    android:text="@string/number_9"
                    android:textColor="@color/white"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/btn_nhan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/whiteDark"
                    android:text="@string/number_nhan"
                    android:textColor="@color/white"
                    android:textSize="30sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/btn_number0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/whiteDark"
                    android:text="@string/number_0"
                    android:textColor="@color/white"
                    android:textSize="30sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/btn_point"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:backgroundTint="@color/whiteDark"
                        android:text="@string/number_cham"
                        android:textColor="@color/white"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/btn_chia"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:backgroundTint="@color/whiteDark"
                        android:text="@string/number_chia"
                        android:textColor="@color/white"
                        android:textSize="30sp" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_result"
            android:layout_width="match_parent"
            android:layout_height="113dp"
            android:layout_weight="8"
            android:backgroundTint="@color/xanh"
            android:text="="
            android:textColor="@color/white"
            android:textSize="30sp" />
    </LinearLayout>

</LinearLayout>